tests/baselines/reference/assignmentCompatability35.errors.txt
tests/cases/compiler/assignmentCompatability35.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type '{ [index: 数字]: 数字; }'.
  Index signature is missing in type 'interfaceWithPublicAndOptional<数字, 文字>'.


==== tests/cases/compiler/assignmentCompatability35.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export var aa:{[index:number]:number;};;
        export var __val__aa = aa;
    }
    __test2__.__val__aa = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type '{ [index: 数字]: 数字; }'.
!!! error TS2322:   Index signature is missing in type 'interfaceWithPublicAndOptional<数字, 文字>'.